--- a/TemplateBuilder/packages.config
+++ b/TemplateBuilder/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AvalonDock" version="2.0.2000" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.1.0" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net45" />
