--- a/TemplateBuilder/TemplateBuilder.csproj
+++ b/TemplateBuilder/TemplateBuilder.csproj
@@ -101,6 +101,7 @@
     </ApplicationDefinition>
     <Compile Include="Infrastructure\Registries\ViewModelsRegistry.cs" />
     <Compile Include="Model\Messages\ControlMessage.cs" />
+    <Compile Include="Model\Messages\NewProjectMessage.cs" />
     <Compile Include="Model\Messages\ProjectContainerMessage.cs" />
     <Compile Include="Model\Messages\OpenProjectMessage.cs" />
     <Compile Include="Model\Messages\SaveProjectMessage.cs" />
@@ -172,6 +173,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PropertiesView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Styles\rdStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
